<resources>

    <string name="sign_in">Masuk</string>
    <string name="sign_in_with_google">Masuk dengan Google</string>
    <string name="sign_in_with_facebook">Masuk dengan Facebook</string>
    <string name="or">Atau</string>
    <string name="username_or_email">Username atau Email</string>
    <string name="username_or_email_error">Username atau Email minimal 4 karakter</string>
    <string name="password">Password</string>
    <string name="password_error">Password minimal 8 karakter</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="login">Login</string>
    <string name="sign_in_with_fingerprint">Masuk dengan Fingerprint</string>
    <string name="dont_have_an_account_yet">Belum punya akun? Daftar sekarang</string>
    <string name="dont_have_an_account_yet_highlight">Daftar sekarang</string>
    <string name="button">Tombol</string>

</resources>