<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <data>
        <variable
            name="viewModel"
            type="com.stockbit.hiring.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/button_loading_with_image"
            android:id="@+id/i_button_google"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:image="@{@drawable/ic_google}"
            app:label="@{@string/sign_in_with_google}"
            app:isLoading="@{false}"
            app:isEnabled="@{true}"
            app:onClicked="@{viewModel::onClickedGoogle}" />

        <include layout="@layout/button_loading_with_image"
            android:id="@+id/i_button_facebook"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            app:image="@{@drawable/ic_facebook}"
            app:isEnabled="@{true}"
            app:isLoading="@{false}"
            app:label="@{@string/sign_in_with_facebook}"
            app:layout_constraintTop_toBottomOf="@id/i_button_google"
            app:onClicked="@{viewModel::onClickedFacebook}"
            tools:layout_editor_absoluteX="16dp" />

        <View
            android:id="@+id/v_line_left"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:background="@color/colorBorder"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toStartOf="@id/tv_or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_or"/>

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/or"
            android:textColor="@color/colorTextLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/i_button_facebook" />

        <View
            android:id="@+id/v_line_right"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorBorder"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_or"
            app:layout_constraintTop_toTopOf="@id/tv_or"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            app:error="@{viewModel.usernameEmailError}"
            app:errorEnabled="@{viewModel.usernameEmailError != null}"
            app:layout_constraintTop_toBottomOf="@id/tv_or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:hint="@string/username_or_email"
                android:textSize="16sp"
                android:maxLength="100"
                android:singleLine="true"
                android:text="@={viewModel.usernameEmail}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:passwordToggleEnabled="true"
            app:error="@{viewModel.passwordError}"
            app:errorEnabled="@{viewModel.passwordError != null}"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:hint="@string/password"
                android:text="@={viewModel.password}"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLength="50" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:onClick="@{viewModel::onClickedForgotPassword}"
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

        <include layout="@layout/button_loading"
            android:id="@+id/i_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            app:label="@{@string/login}"
            app:isLoading="@{false}"
            app:isEnabled="@{viewModel.isButtonEnabled}"
            app:onClicked="@{viewModel::onClickedLogin}" />

        <include layout="@layout/button_loading_outline"
            android:id="@+id/i_button_sign_in_with_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/i_button_login"
            app:label="@{@string/sign_in_with_fingerprint}"
            app:isLoading="@{false}"
            app:isEnabled="@{true}"
            app:onClicked="@{viewModel::onClickedSignInWithFingerprint}" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorTextDark"
            android:textAlignment="center"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/i_button_sign_in_with_fingerprint"
            tools:text="@string/dont_have_an_account_yet" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>